@@ -1,6 +1,6 @@
 // ========================================================================
 // gnubiff -- a mail notification program
-// Copyright (c) 2000-2004 Nicolas Rougier
+// Copyright (c) 2000-2005 Nicolas Rougier
 //
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License as
@@ -53,6 +53,7 @@ public:
 	// ========================================================================	
 	int connect (void);
 	void fetch (void);
+	std::string file_to_monitor (void);
 };
 
 #endif
