@@ -15,6 +15,8 @@ Version 2.1.4
         "src/socket.*" and "src/ui-applet.*"
    - Cleanup: New class Support (for existing functions in "src/support.cc")
    - Cleanup: Moved parsing of number sequences to "src/support.cc"
+   - Bugfix: Don't monitor directory for mh protocol (saves resources)
+
 
 Version 2.1.3		2005-04-03 23:57
  * Robert Sowada
